--- a/admin/package.json
+++ b/admin/package.json
@@ -23,6 +23,7 @@
     "@tiptap/extension-superscript": "^2.1.12",
     "@tiptap/extension-text-align": "^2.1.12",
     "@tiptap/extension-text-style": "^2.1.12",
+    "@tiptap/extension-underline": "^2.4.0",
     "@tiptap/pm": "^2.1.12",
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
